k8s/vikunja/maria.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: vikunja
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:13
          args:
            - "--character-set-server=utf8mb4"
            - "--collation-server=utf8mb4_unicode_ci"
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-data
---

apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: vikunja
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
