k8s/vikunja/vikunja.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.7.0
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: vikunja-config
              mountPath: /app/vikunja/config.yml
              subPath: config.yml
            - name: vikunja-files
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-config
          secret:
            secretName: vikunja-secret
        - name: vikunja-files
          persistentVolumeClaim:
            claimName: vikunja-files
---

apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - port: 3456
      targetPort: 3456
  type: ClusterIP
