k8s/vikunja/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: vikunja
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: todo.alexmihai.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
